; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_device.c_ib_modify_port.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_device.c_ib_modify_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_device = type { {}* }
%struct.ib_port_modify = type { i32 }

@ENOSYS = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ib_modify_port(%struct.ib_device* %0, i64 %1, i32 %2, %struct.ib_port_modify* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ib_device*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.ib_port_modify*, align 8
  store %struct.ib_device* %0, %struct.ib_device** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.ib_port_modify* %3, %struct.ib_port_modify** %9, align 8
  %10 = load %struct.ib_device*, %struct.ib_device** %6, align 8
  %11 = getelementptr inbounds %struct.ib_device, %struct.ib_device* %10, i32 0, i32 0
  %12 = bitcast {}** %11 to i32 (%struct.ib_device*, i64, i32, %struct.ib_port_modify*)**
  %13 = load i32 (%struct.ib_device*, i64, i32, %struct.ib_port_modify*)*, i32 (%struct.ib_device*, i64, i32, %struct.ib_port_modify*)** %12, align 8
  %14 = icmp ne i32 (%struct.ib_device*, i64, i32, %struct.ib_port_modify*)* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %4
  %16 = load i32, i32* @ENOSYS, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %5, align 4
  br label %41

18:                                               ; preds = %4
  %19 = load i64, i64* %7, align 8
  %20 = load %struct.ib_device*, %struct.ib_device** %6, align 8
  %21 = call i64 @rdma_start_port(%struct.ib_device* %20)
  %22 = icmp slt i64 %19, %21
  br i1 %22, label %28, label %23

23:                                               ; preds = %18
  %24 = load i64, i64* %7, align 8
  %25 = load %struct.ib_device*, %struct.ib_device** %6, align 8
  %26 = call i64 @rdma_end_port(%struct.ib_device* %25)
  %27 = icmp sgt i64 %24, %26
  br i1 %27, label %28, label %31

28:                                               ; preds = %23, %18
  %29 = load i32, i32* @EINVAL, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %5, align 4
  br label %41

31:                                               ; preds = %23
  %32 = load %struct.ib_device*, %struct.ib_device** %6, align 8
  %33 = getelementptr inbounds %struct.ib_device, %struct.ib_device* %32, i32 0, i32 0
  %34 = bitcast {}** %33 to i32 (%struct.ib_device*, i64, i32, %struct.ib_port_modify*)**
  %35 = load i32 (%struct.ib_device*, i64, i32, %struct.ib_port_modify*)*, i32 (%struct.ib_device*, i64, i32, %struct.ib_port_modify*)** %34, align 8
  %36 = load %struct.ib_device*, %struct.ib_device** %6, align 8
  %37 = load i64, i64* %7, align 8
  %38 = load i32, i32* %8, align 4
  %39 = load %struct.ib_port_modify*, %struct.ib_port_modify** %9, align 8
  %40 = call i32 %35(%struct.ib_device* %36, i64 %37, i32 %38, %struct.ib_port_modify* %39)
  store i32 %40, i32* %5, align 4
  br label %41

41:                                               ; preds = %31, %28, %15
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i64 @rdma_start_port(%struct.ib_device*) #1

declare dso_local i64 @rdma_end_port(%struct.ib_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
